Added functions memory config to test

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "rewrites": [
-    { "source":  "/post/:id", "destination":  "post"}
-  ]
+    { "source":  "/post/:id", "destination":  "post/"}
+  ],
+  "functions": {
+    "pages/**": {
+      "memory": 3008
+    }
+  }
 }
