--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "9.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   }
